# MCP_MERCADOLIBRE

./: README.md  client.py  main.py  promtp_client.md  pyproject.toml  selectors_db.json  selectors_mx.json  server.py
browser/: browser.py  config.py
data/: common_errors.json
models/: errors.py  product.py  selectors.py
tools/: error_manager.py  error_tools.py  error_wrapper.py  extraction.py  navigation.py  products.py  selectors.py  utilities.py
