[project]
name = "agent-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.0.0",
    "beautifulsoup4>=4.12.0",
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
    "openai>=1.99.3",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.6.2",
    "pydantic-ai-slim[duckduckgo]>=0.6.2",
    "python-dateutil>=2.8.0",
]
